--- a/lumiashop/index.html
+++ b/lumiashop/index.html
@@ -61,8 +61,7 @@
         <p>Jättespotlight. Mått Ø 50 cm, höjd 170 cm.</p>
         <button onclick="add(this)">Köp för <span>25000</span> kr</button>
       </div>
-      <img onclick="toggle(this)"
-        src="https://www.thegreenhead.com/imgs/spotlight-metal-tripod-floor-lamp-2.jpg">
+      <img onclick="toggle(this)" src="https://www.thegreenhead.com/imgs/spotlight-metal-tripod-floor-lamp-2.jpg">
     </div>
 
   </div>
